test/objects/bad/objects007.lat
class o1 {

}

class o2 extends o3 {

}

int main() {
	return 0;
}
